Adição final do projeto